logs/nuxeo-drive.log
Listing '.'...
Listing './bin'...
Listing './icons'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/nuxeo_drive-3.0.3.egg-info'...
Listing './lib/python3.5/site-packages/nxdrive'...
Listing './lib/python3.5/site-packages/nxdrive/client'...
Compiling './lib/python3.5/site-packages/nxdrive/client/common.py'...
***   File "./lib/python3.5/site-packages/nxdrive/client/common.py", line 95
    return re.sub(ur'(/|\\|\*|:|\||"|<|>|\?)', replacement, name)
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nxdrive/client/local_client.py'...
***   File "./lib/python3.5/site-packages/nxdrive/client/local_client.py", line 40
    DEDUPED_BASENAME_PATTERN = ur'^(.*)__(\d{1,3})$'
                                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nxdrive/data'...
Listing './lib/python3.5/site-packages/nxdrive/data/icons'...
Listing './lib/python3.5/site-packages/nxdrive/data/icons/overlay'...
Listing './lib/python3.5/site-packages/nxdrive/data/icons/overlay/nautilus'...
Listing './lib/python3.5/site-packages/nxdrive/data/icons/overlay/win32'...
Listing './lib/python3.5/site-packages/nxdrive/data/ui5'...
Listing './lib/python3.5/site-packages/nxdrive/data/ui5/css'...
Listing './lib/python3.5/site-packages/nxdrive/data/ui5/fonts'...
Listing './lib/python3.5/site-packages/nxdrive/data/ui5/imgs'...
Listing './lib/python3.5/site-packages/nxdrive/data/ui5/js'...
Listing './lib/python3.5/site-packages/nxdrive/data/ui5/templates'...
Listing './lib/python3.5/site-packages/nxdrive/debug'...
Listing './lib/python3.5/site-packages/nxdrive/debug/wui'...
Listing './lib/python3.5/site-packages/nxdrive/engine'...
Listing './lib/python3.5/site-packages/nxdrive/engine/dao'...
Listing './lib/python3.5/site-packages/nxdrive/engine/next'...
Listing './lib/python3.5/site-packages/nxdrive/engine/watcher'...
Compiling './lib/python3.5/site-packages/nxdrive/engine/watcher/local_watcher.py'...
***   File "./lib/python3.5/site-packages/nxdrive/engine/watcher/local_watcher.py", line 28
    TEXT_EDIT_TMP_FILE_PATTERN = ur'.*\.rtf\.sb\-(\w)+\-(\w)+$'
                                                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nxdrive/gui'...
Listing './lib/python3.5/site-packages/nxdrive/osi'...
Listing './lib/python3.5/site-packages/nxdrive/osi/darwin'...
Listing './lib/python3.5/site-packages/nxdrive/osi/windows'...
Compiling './lib/python3.5/site-packages/nxdrive/osi/windows/win32_handlers.py'...
***   File "./lib/python3.5/site-packages/nxdrive/osi/windows/win32_handlers.py", line 29
    STATUS_BUFFER_OVERFLOW = 0x80000005L
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nxdrive/utils.py'...
***   File "./lib/python3.5/site-packages/nxdrive/utils.py", line 167
    hf = re.sub(ur'-HF', '.', x_number).split('.', 1)
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nxdrive/wui'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
Listing './ui5'...
Listing './ui5/css'...
Listing './ui5/fonts'...
Listing './ui5/imgs'...
Listing './ui5/js'...
Listing './ui5/templates'...
